[package]
name = "rust_dx_samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxlib-ffi = { git = "https://github.com/tanukimaru0090/dxlib-ffi-rs", branch = "master", version = "0.1.0" }
dxlib-rs = { git = "https://github.com/tanukimaru0090/dxlib-rs", branch = "master", version = "0.1.0" , feature = ["dxlib-ffi"] }
rfd = "0.12.0"
sys-info = "0.9.1"
text_io = "0.1.12"
winmsg = "0.1.1"
